<?xml version="1.0"?>
<package format="3">
  <name>septentrio_gnss_driver</name>
  <version>1.3.2</version>
  <description>ROSaic: C++ driver for Septentrio's mosaic receivers and beyond</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="tibor.doeme@alumni.ethz.ch">Tibor Dome</maintainer>
  <maintainer email="githubuser@septentrio.com">Septentrio</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD 3-Clause License</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">https://github.com/septentrio-gnss/septentrio_gnss_driver</url>
  <url type="website">https://www.ros.org/wiki/septentrio_gnss_driver</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author>Tibor Dome</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be ROS packages or system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  
  <depend>diagnostic_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gps_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>boost</depend>
  <depend>libpcap</depend>  
  <depend>geographiclib</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
